replaced placeholder image with screenshot images

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <section class="fixed200">
                                     <img
                                         class="image fit"
-                                        src="images/Placeholder_250x250.png?raw=true"
+                                        src="images/MineSweeper_250x189.png?raw=true"
                                         alt="MineSweeper"/>
                                 </section>
                                 <section class="info">
@@ -189,7 +189,7 @@
                                 <section class="fixed200">
                                     <img
                                         class="image fit"
-                                        src="images/Placeholder_250x250.png?raw=true"
+                                        src="images/RefactaMasta_250x250.png?raw=true"
                                         alt="RefactaMasta"/>
                                 </section>
                                 <section class="info">
@@ -287,7 +287,7 @@
                                 <section class="fixed200">
                                     <img
                                         class="image fit centered"
-                                        src="images/Placeholder_250x250.png?raw=true"
+                                        src="images/FlappyBird_NN_250x250.png?raw=true"
                                         alt="FlappyBird - Neural Network"/>
                                 </section>
                                 <section class="info">
@@ -308,7 +308,7 @@
                                 <section class="fixed200">
                                     <img
                                         class="image fit"
-                                        src="images/Placeholder_250x250.png?raw=true"
+                                        src="images/LazAR-Tag_Promo_250x250.png?raw=true"
                                         alt="LazarTag FYP"/>
                                 </section>
                                 <section class="info">
@@ -329,7 +329,7 @@
                                 <section class="fixed200">
                                     <img
                                         class="image fit"
-                                        src="images/Placeholder_250x250.png"
+                                        src="images/RayTracer_250x250.png"
                                         alt="Memory Manager"/>
                                 </section>
                                 <section class="info">
@@ -426,7 +426,7 @@
                                 <section class="fixed200">
                                     <img
                                         class="image fit"
-                                        src="images/Placeholder_250x250.png"
+                                        src="images/COD_Mod_250x250.png?raw=true"
                                         alt="FPS-RPG" />
                                 </section>
                                 <section class="info">
