added link to cv added cv in pdf format

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                     <li>
                         <a href="#about" id="about-link"><span class="icon fa-user">About Me</span></a>
                     </li>
+                    <li>
+                        <a href="CV%20-%20MLT%20-%20Games%20Developer%204.pdf" id="resume-link" target="_blank"><span class="icon fa-download">Resume</span></a>
+                    </li>   
                 </ul>
             </nav>
         </div>
