updated broken links to point directly to github repos. not ideal as other links point to an information/demo page.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 
                     <!-- MeteorMoshPit -->
                     <div class="col-4 col-12-mobile">
-                        <a href="MeteorMoshPit.html" >
+                        <a href="https://github.com/BlackRece/MeteorMoshPit" target="_blank">
+                        <!--a href="MeteorMoshPit.html" -->
                             <article class="item">
                                 <header>
                                     <h4>Meteor Mosh Pit</h4>
@@ -163,7 +164,8 @@
 
                     <!-- MineSweeper -->
                     <div class="col-4 col-12-mobile">
-                        <a href="MineSweeper.html">
+                        <a href="https://blackrece.itch.io/minesweeper" target="_blank">
+                        <!--a href="MineSweeper.html"-->
                             <article class="item">
                                 <header>
                                     <h4>MineSweeper</h4>
@@ -184,7 +186,8 @@
 
                     <!-- RefactaMasta -->
                     <div class="col-4 col-12-mobile">
-                        <a href="RefactaMasta.html">
+                        <a href="https://github.com/BlackRece/RefactaMasta" target="_blank">
+                        <!--a href="RefactaMasta.html"-->
                             <article class="item">
                                 <header>
                                     <h4>RefactaMasta</h4>
@@ -282,7 +285,8 @@
 
                     <!-- FlappyBird - Neural Network -->
                     <div class="col-4 col-12-mobile">
-                        <a href="FlappyBird_NN.html">
+                        <a href="https://github.com/BlackRece/FlappyBird_NN" target="_blank">
+                        <!--a href="FlappyBird_NN.html"-->
                             <article class="item">
                                 <header>
                                     <h4>FlappyBird -Neural Network</h4>
@@ -303,7 +307,8 @@
 
                     <!-- LazarTag -->
                     <div class="col-4 col-12-mobile">
-                        <a href="LazarTag.html">
+                        <a href="https://github.com/BlackRece/LazAR-Tag" target="_blank">
+                        <!--a href="LazarTag.html"-->
                             <article class="item">
                                 <header>
                                     <h4>LazarTag</h4>
@@ -324,10 +329,10 @@
 
                     <!-- Memory Manager -->
                     <div class="col-4 col-12-mobile">
-                        <a href="MemoryManager" >
+                        <a href="https://github.com/BlackRece/RayTracer/tree/main" target="_blank">
                             <article class="item">
                                 <header>
-                                    <h4>Memory Manager</h4>
+                                    <h4>RayTracer with Memory Manager</h4>
                                 </header>
                                 <section class="fixed200">
                                     <img
@@ -421,7 +426,8 @@
 
                     <!-- FPS-RPG -->
                     <div class="col-4 col-12-mobile">
-                        <a href="FPS-RPG.html" >
+                        <a href="https://github.com/BlackRece/FPS-RPG" target="_blank">
+                        <!--a href="FPS-RPG.html" -->
                             <article class="item">
                                 <header>
                                     <h4>FPS-RPG</h4>
