reinstated link to TriFighter on kongregate

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
                     <!-- TriFighter -->
                     <div class="col-4 col-12-mobile">
-                        <a href="TriFighter.html" >
+                        <a href="https://www.kongregate.com/games/BlackRece/tri-fighter" target="_blank" >
                             <article class="item" >
                                 <!--a href="https://www.kongregate.com/games/BlackRece/tri-fighter" class="image fit"><img src="images/TriFighter_Icon.png" alt="TriFighter" /></a-->
                                 <header>
