updating skills and copyright date added notes to change images

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
 		</section>
         
         <!-- Portfolio -->
+        <!-- All links should point to repo -->
+        <!-- All images should be 250x250 -->
         <section id="portfolio" class="three">
             <div class="container">
 
@@ -502,7 +504,7 @@
     <div id="footer">
 
         <!-- Copyright -->
-        <p class="copyright">&copy; blackrece.co.uk 2018-2023. All rights reserved.</p>
+        <p class="copyright">&copy; blackrece.co.uk 2018-2024. All rights reserved.</p>
 
     </div>
 
